--- a/2025-10_deno_prisma_starter/deno.json
+++ b/2025-10_deno_prisma_starter/deno.json
@@ -4,6 +4,7 @@
         "prisma": "deno -A prisma"
     },
     "imports": {
+        "@prisma/client": "npm:@prisma/client@^6.17.0",
         "@std/assert": "jsr:@std/assert@1",
         "prisma": "npm:prisma@^6.17.0"
     },
